--- a/packages/web/AppInterface/dataSources.html
+++ b/packages/web/AppInterface/dataSources.html
@@ -1,1 +1,38 @@
 <!--Needs Popups: 1. Confirm delete, 2. DataSource Type; Add Home button -->
+
+
+<html lang="en">
+<head>
+    <title>Available Data Sources</title>
+    <script type = "text/javascript" src = "https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+<body>
+
+<div class="sidebar">
+
+    <a href="#" >Data Sources</a>
+    <a href="#">Add Data Source</a>
+
+    <a id = "settings" href="#">Settings</a>
+</div>
+
+<div class = "flex-container main">
+    <div class="header">
+        <h1>App Name</h1>
+        <p>Custom Data Source</p>
+
+    </div>
+
+    <div class = "d-flex flex-row boxes" id = "dataSourceBox">
+        <a href="editFolderDS.html">
+            <div class ="item bg-info col-12"  v-for="item in items" >
+               {{item.text}}
+            </div>
+        </a>
+    </div>
+</div>
+<script src="vue_script_test.js"></script>
+</body>
+</html>
