--- a/packages/web/AppInterface/home.html
+++ b/packages/web/AppInterface/home.html
@@ -1,1 +1,3 @@
 <!--Home needs Results added in, and DataSource choice pop-up-->
+
+<!--Some more notes: we need the top bar to be a static size, else we're going to have trouble-->
