--- a/packages/web/AppInterface/home.html
+++ b/packages/web/AppInterface/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -18,17 +19,19 @@
 
         <a href="dataSources.html" >Data Sources</a>
         <a href="#">Add Data Source</a> <!--Must produce a pop-up -->
-
-
         <a id = "settings" href="#">Settings</a>
     </div>
 
     <div class = "flex-container main">
         <div class="header">
-            <p>Available Data Source</p>
+            <p>Home</p>
 
         </div>
 
+        <form class="search row" action="#">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
 <!--        <div class = "d-flex flex-row boxes" id = "dataSourceBox">-->
 <!--            <div class ="item bg-info col-12"  v-for="item in items" >-->
 <!--                <a href="editFolderDS.html">-->
