demo v-bind, v-model, v-on

--- a/packages/web/index.h.html
+++ b/packages/web/index.h.html
@@ -20,12 +20,20 @@
 </div>
 
 <div id="bind-attribute">
-
-
   <span v-bind:title="message">
     Hover your mouse over me for a few seconds to see my DYNAMICALLY bound
     title!
   </span>
+</div>
+
+<div id="event-handling">
+    <p>{{ message }}</p>
+    <button v-on:click="reverseMessage">Reverse Message</button>
+</div>
+
+<div id="two-way-binding">
+    <p>{{ message }}</p>
+    <input v-model="message" />
 </div>
 
 <script src="index.js"></script>
