--- a/packages/web/index.h.html
+++ b/packages/web/index.h.html
@@ -9,6 +9,7 @@
 <body>
 
 <div id="search-system">
+    <p>{{query}}</p>
     <input v-model="query" />
     <button @click="search">Search</button>
 
