--- a/packages/web/index.h.html
+++ b/packages/web/index.h.html
@@ -12,7 +12,7 @@
     <p>{{query}}</p>
     <input v-model="query" />
     <button @click="search">Search</button>
-
+    <button @click="addDataSource">Add</button>
     {{ result }}
 </div>
 
