--- a/packages/web/example.html
+++ b/packages/web/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Data Search</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="example.css">
     <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
@@ -15,6 +15,6 @@
     <p v-for="r in result"><i>{{ r.title }}</i> <br> {{r.snippet}}</p>
 </div>
 
-<script src="index.js"></script>
+<script src="example.js"></script>
 </body>
 </html>
