--- a/packages/web/example.html
+++ b/packages/web/example.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 
+<div id="data-sources">
+    <p v-for="s in datasourceList">{{s.info}}</p>
+    <input v-model="datasource"/>
+    <button @click="addDataSource">Add Datasource</button>
+
+</div>
+
 <div id="search-system">
     <input v-model="query" />
     <button @click="search">Search</button>
-    <button @click="addDataSource">Add</button>
     <p v-for="r in result"><i>{{ r.title }}</i> <br> {{r.snippet}}</p>
 </div>
 
