--- a/packages/web/example.html
+++ b/packages/web/example.html
@@ -5,7 +5,7 @@
     <title>Data Search</title>
     <link rel="stylesheet" href="example.css">
     <script src="https://unpkg.com/vue@next"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
 </head>
 <body>
 
