more integrity check additions

--- a/packages/web/viewDataSources.html
+++ b/packages/web/viewDataSources.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Data Search</title>
     <link rel="stylesheet" href="index.css">
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/vue@next" integrity="sha384-MEjJ07I/SLnb0PgyCIWKX5JtRELbplt6ecAPNT9eEI0mq8dGm9met0SpBoJsdYzt" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
