Improved readability of results

--- a/packages/web/example.html
+++ b/packages/web/example.html
@@ -17,8 +17,8 @@
                 <input v-model="query" class = "input-box"/>
                 <button @click="search" class = "input-button" >Search</button>
             </div>
-            <div v-for="file in result" >
-                <p style = "font-family: Trebuchet MS; color: floralwhite;"><strong>{{file.fileName}}</strong></p>
+            <div class = "output" v-for="file in result" >
+                <p style = "font-family: Trebuchet MS; color: floralwhite;"><strong>Filename: {{file.fileName}}</strong></p>
                 <div class="search-output" v-for="r in file.occurrences">
                     <p ><em>{{r.lineNumber}}</em> {{r.occurrenceString}}</p>
                 </div>
